fix final layout issues

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -232,7 +232,6 @@ h3 {
 	h2{display: inline-block; padding-left:5px;}
 
 	.video {
-		height: 250px;
 		width: 100%;
 	}
 }
@@ -263,13 +262,16 @@ h3 {
 }
 
 .main-part .left .images {
+	overflow: hidden;
 	& > li {
-		display: inline-block;
+		display: inline;
 		&>img {
+			float: left;
 			width: $main-part-left-right-width/3;
 			height: $main-part-left-right-width/3;
 		}
 	}
+
 }
 
 .main-part .left .activities {
@@ -311,8 +313,8 @@ h3 {
 	padding: 20px;
 	ul {padding: 5px 0;}
 	li {padding: 5px 0;}
-	img {display: inline-block;}
-	span {display: inline-block;  padding: 0 10px; vertical-align: middle;}
+	img {display: inline-block; vertical-align: middle;}
+	.name {display: inline-block;  padding: 0 10px; vertical-align: middle;}
 }
 
 @media screen and (max-width: 1024px) and (min-width: 641px) { 
